--- a/index.html
+++ b/index.html
@@ -1,77 +1,83 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Honey & Ginger Holidays</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #faf8fc;
-    color: #333;
-    margin: 0;
-    text-align: center;
-  }
-  .card {
-    max-width: 400px;
-    margin: 20px auto;
-    background: white;
-    border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    padding: 20px;
-  }
-  .logo {
-    max-width: 150px;
-    margin: 10px auto;
-  }
-  h1 {
-    color: #6b4b7e; /* Mauve */
-    font-size: 22px;
-    margin: 10px 0 5px;
-  }
-  p.tagline {
-    font-style: italic;
-    color: #b88a44; /* Yellow-gold */
-    margin: 5px 0 20px;
-  }
-  .btn {
-    display: block;
-    background: #6b4b7e;
-    color: white;
-    text-decoration: none;
-    padding: 12px;
-    margin: 10px auto;
-    border-radius: 30px;
-    width: 80%;
-    font-weight: bold;
-    transition: background 0.3s;
-  }
-  .btn:hover {
-    background: #583966;
-  }
-  .social-icons {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    margin-top: 20px;
-  }
-  .social-icons a {
-    text-decoration: none;
-    color: #6b4b7e;
-    font-size: 20px;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Honey & Ginger Holidays - Digital Card</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fff8f9;
+      margin: 0;
+      padding: 0;
+      color: #4b2c4e;
+      text-align: center;
+    }
+    .container {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .logo img {
+      max-width: 180px;
+      margin-top: 20px;
+    }
+    h1 {
+      color: #a42c6f;
+      margin-top: 10px;
+    }
+    p {
+      margin: 10px 0;
+      font-size: 16px;
+    }
+    .button {
+      display: block;
+      background-color: #a42c6f;
+      color: white;
+      padding: 12px;
+      margin: 10px auto;
+      border-radius: 8px;
+      text-decoration: none;
+      width: 80%;
+      max-width: 300px;
+      font-weight: bold;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    }
+    .button:hover {
+      background-color: #84245b;
+    }
+    footer {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-<div class="card">
-  <img src="logo.png" alt="Honey & Ginger Holidays Logo" class="logo">
-  <h1>Honey & Ginger Holidays</h1>
-  <p class="tagline">Where Every Trip Feels Handcrafted</p><a class="btn" href="tel:+918178470419">📞 Call Us</a> <a class="btn" href="https://wa.me/918178470419">💬 WhatsApp</a> <a class="btn" href="mailto:info@honeygingerholidays.com">✉️ Email</a> <a class="btn" href="https://www.honeygingerholidays.com" target="_blank">🌐 Visit Website</a>
+  <div class="container">
+    <!-- Logo -->
+    <div class="logo">
+      <img src="https://i.ibb.co/qpLr5J8/honey-ginger-logo.png" alt="Honey & Ginger Holidays Logo">
+    </div>
 
-  <div class="social-icons">
-    <a href="https://www.instagram.com/honeyandgingerholidays" target="_blank">📸</a>
-    <a href="https://www.linkedin.com/company/honey-and-ginger-holidays/" target="_blank">💼</a>
-    <a href="https://youtube.com/@honeyandgingerholidays" target="_blank">▶️</a>
+    <!-- Company Name -->
+    <h1>Honey & Ginger Holidays</h1>
+    <p><em>A Boutique Travel Company Crafting Happy Memories</em></p>
+
+    <!-- Contact Info -->
+    <a href="tel:+918178470419" class="button">📞 Call Us</a>
+    <a href="mailto:info@honeygingerholidays.com" class="button">📧 Email Us</a>
+    <a href="https://www.honeygingerholidays.com" class="button">🌐 Visit Website</a>
+
+    <!-- Social Links -->
+    <a href="https://www.instagram.com/honeyandgingerholidays" class="button">📷 Instagram</a>
+    <a href="https://www.linkedin.com/company/honey-and-ginger-holidays/" class="button">💼 LinkedIn</a>
+    <a href="https://youtube.com/@honeyandgingerholidays" class="button">▶️ YouTube</a>
+
+    <!-- Footer -->
+    <footer>
+      © 2025 Honey & Ginger Holidays. All Rights Reserved.
+    </footer>
   </div>
-</div>
 </body>
 </html>
